public class estado {

    public void licuar(){
        System.out.println("Licuando");
    }
    public void apagar(){
        System.out.println("Apagando");
    }
}
